[gd_scene load_steps=2 format=2]

[ext_resource path="res://SCENES/Elements/SpaceElement.gd" type="Script" id=1]

[node name="SpaceElement" type="RigidBody2D" groups=["draggable"]]
input_pickable = true
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

[node name="AppearTween" type="Tween" parent="."]

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
